// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle importing other ts files 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "id",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
    },
  },
  "kind": "program",
}
`;

exports[`follow export default export 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "className",
          },
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`follow export named default export 1`] = `
Object {
  "component": undefined,
  "kind": "program",
}
`;

exports[`ts any 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "any",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts array 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "key": Object {
            "kind": "any",
          },
          "kind": "generic",
          "typeParams": Object {
            "kind": "typeParams",
            "params": Array [
              Object {
                "kind": "number",
              },
            ],
          },
          "value": Object {
            "kind": "id",
            "name": "Array",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts array prop 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Schedule",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "intervals",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "key": Object {
              "kind": "any",
            },
            "kind": "generic",
            "typeParams": Object {
              "kind": "typeParams",
              "params": Array [
                Object {
                  "kind": "object",
                  "members": Array [
                    Object {
                      "key": Object {
                        "kind": "id",
                        "name": "begin",
                      },
                      "kind": "property",
                      "optional": false,
                      "value": Object {
                        "kind": "generic",
                        "value": Object {
                          "kind": "id",
                          "name": "Interval['begin']",
                        },
                      },
                    },
                    Object {
                      "key": Object {
                        "kind": "id",
                        "name": "end",
                      },
                      "kind": "property",
                      "optional": false,
                      "value": Object {
                        "kind": "generic",
                        "value": Object {
                          "kind": "id",
                          "name": "Interval['end']",
                        },
                      },
                    },
                  ],
                },
              ],
            },
            "value": Object {
              "kind": "id",
              "name": "Array",
            },
          },
        },
      ],
      "referenceIdName": "ScheduleProps",
    },
  },
  "kind": "program",
}
`;

exports[`ts as expression 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "string",
            "value": "foo",
          },
          "key": Object {
            "kind": "id",
            "name": "bar",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "union",
              "referenceIdName": "Foo",
              "types": Array [
                Object {
                  "kind": "string",
                  "value": "foo",
                },
                Object {
                  "kind": "string",
                  "value": "bar",
                },
              ],
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts boolean 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts call signature declaration 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "string",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "x",
                },
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts custom prop 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Badge",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "texture",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "BadgeProps",
    },
  },
  "kind": "program",
}
`;

exports[`ts custom prop 2`] = `
Object {
  "component": Object {
    "key": Object {
      "kind": "any",
    },
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "typeParams": Object {
      "kind": "typeParams",
      "params": Array [
        Object {
          "kind": "string",
        },
        Object {
          "kind": "object",
          "members": Array [],
        },
      ],
    },
    "value": Object {
      "kind": "any",
      "referenceIdName": "Foo",
    },
  },
  "kind": "program",
}
`;

exports[`ts decorators 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [],
    "name": Object {
      "kind": "id",
      "name": "Theme",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts different React components 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "void",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "FooComponent",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts enum 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "union",
            "referenceIdName": "Color",
            "types": Array [
              Object {
                "kind": "id",
                "name": "Color.Red",
              },
              Object {
                "kind": "id",
                "name": "Color.Green",
              },
              Object {
                "kind": "id",
                "name": "Color.Blue",
              },
            ],
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts export all 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "nestedProperty1",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "nestedProperty2",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
    },
  },
  "kind": "program",
}
`;

exports[`ts function 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "string",
                },
              },
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "boolean",
                },
              },
            ],
            "returnType": Object {
              "kind": "number",
            },
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts interface 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "bar",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "referenceIdName": "ComponentProps",
    },
  },
  "kind": "program",
}
`;

exports[`ts interface extend 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "default": Object {
            "kind": "number",
            "value": 1,
          },
          "key": Object {
            "kind": "id",
            "name": "b",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "c",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts literals 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "string",
              "value": "25",
            },
            Object {
              "kind": "string",
              "value": 30,
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts method signature 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "on",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "x",
                },
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts nested prop 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Badge",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "texture",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "Texture['src']",
            },
          },
        },
      ],
      "referenceIdName": "BadgeProps",
    },
  },
  "kind": "program",
}
`;

exports[`ts no react component 1`] = `
Object {
  "component": undefined,
  "kind": "program",
}
`;

exports[`ts object 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "object",
          "members": Array [
            Object {
              "key": Object {
                "kind": "id",
                "name": "name",
              },
              "kind": "property",
              "optional": false,
              "value": Object {
                "kind": "string",
              },
            },
          ],
        },
      },
      Object {
        "key": Object {
          "kind": "id",
          "name": "bar",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
      Object {
        "key": Object {
          "kind": "id",
          "name": "verified",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts optional 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": true,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts parenthesized type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "object",
            "members": Array [
              Object {
                "key": Object {
                  "kind": "id",
                  "name": "b",
                },
                "kind": "property",
                "optional": false,
                "value": Object {
                  "kind": "string",
                },
              },
            ],
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts recursive type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "properties",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "object",
              "members": Array [
                Object {
                  "key": Object {
                    "kind": "id",
                    "name": "property",
                  },
                  "kind": "property",
                  "optional": false,
                  "value": Object {
                    "kind": "string",
                  },
                },
              ],
              "referenceIdName": "SiblingInterface",
            },
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "type",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "RecursiveType",
            },
          },
        },
      ],
      "referenceIdName": "RecursiveType",
    },
  },
  "kind": "program",
}
`;

exports[`ts string 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts tuple 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "tuple",
          "types": Array [
            Object {
              "kind": "string",
            },
            Object {
              "kind": "number",
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts type alias 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts type alias declaration - 1 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "union",
              "referenceIdName": "LiteralType",
              "types": Array [
                Object {
                  "kind": "string",
                  "value": "one",
                },
                Object {
                  "kind": "string",
                  "value": "two",
                },
              ],
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts type alias declaration - 2 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "union",
              "referenceIdName": "ReactElement",
              "types": Array [
                Object {
                  "key": Object {
                    "kind": "any",
                  },
                  "kind": "generic",
                  "typeParams": Object {
                    "kind": "typeParams",
                    "params": Array [
                      Object {
                        "kind": "any",
                      },
                    ],
                  },
                  "value": Object {
                    "kind": "id",
                    "name": "React.ReactElement",
                  },
                },
                Object {
                  "kind": "arrayType",
                  "type": Object {
                    "key": Object {
                      "kind": "any",
                    },
                    "kind": "generic",
                    "typeParams": Object {
                      "kind": "typeParams",
                      "params": Array [
                        Object {
                          "kind": "any",
                        },
                      ],
                    },
                    "value": Object {
                      "kind": "id",
                      "name": "React.ReactElement",
                    },
                  },
                },
              ],
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts union 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "number",
            },
            Object {
              "kind": "string",
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts unknown prop 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "children",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "unknown",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts void 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "void",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`typescript React.ComponentType 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "children",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "React.ComponentType",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`typescript indexed imported type 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "id",
            "name": "ImportedType['props']",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`typescript indexed type 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;
